sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:4: error: not found: value v
  {v=getValeur(i)
   ^AlgInsertionSort:6: error: not found: value v
   while(j>0 && getValeur(j-1>v)){
                              ^AlgInsertionSort:11: error: not found: value v
   setValeur(j,v)}} 
               ^